vuepress/docs/v6.2/tutorials/README.md
# Tutorials Overview

::: tip Entando simplifies the development of modern apps:

1. Built using modern JavaScript frameworks
2. Backed by microservices deployed in containers, and
3. Orchestrated by Kubernetes for fully automated DevOps lifecycles
:::

Entando supports full stack micro frontend and microservice architectures for codebases that are easier to undestand, maintain, and debug across large, distributed teams, and comes with a private component repository that makes it easy for teams to share and reuse components.

## How to Use This Guide

Use the categories on the left to find step-by-step tutorials for common tasks. Or check out our learning paths for a more structured approach.

## Frontend Developers

<style>
table th:first-of-type {
    width: 33%;
}
table th:nth-of-type(2) {
    width: 33%;
}
table th:nth-of-type(3) {
    width: 34%;
}
</style>

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Build a Basic Widget](./cms/app-builder/hello-world.md)| [Add Configuration to a Widget](./micro-frontends/widget-configuration.md)| [Generate Micro Frontends and Microservices Based on a Database Entity](./backend-developers/generate-microservices-and-micro-frontends.md) | 
| [Create a React Micro Frontend](./micro-frontends/react.md) | [Enable Communication between MFEs](./micro-frontends/communication.md) | 
| [Create an Angular Micro Frontend](./micro-frontends/angular.md) | | 
| [Create and Manage Content](./cms/content-tutorial.md)| |


## Backend Developers

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Generate Micro Frontends and Microservices Based on a Database Entity](./backend-developers/generate-microservices-and-micro-frontends.md) | [Build and Deploy an Entando Bundle](./backend-developers/build-and-deploy.md) | [Extend the Entando App Builder](./customize-the-platform/extend-app-builder.md)|
| [Run Micro Frontends and Microservices in your local env](./backend-developers/run-local.md) | Use JDL Studio to Create a Complex Database Entity (Coming Soon) | 

## DevOps

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Set Up Entando on a Local Kubernetes Cluster](../docs/getting-started/) | [Backing Up and Restoring Your Entando Environment](./devops/backing-up-and-restoring-your-environment.md) | Automate Integration Testing With a CI/CD Pipeline <br> (Coming Soon)
| [Set Up Entando on Amazon Elastic Kubernetes Service (EKS)](./devops/installation/elastic-kubernetes-service/eks-install.md) | [Customize the base Entando Application via a Docker Image](./devops/build-core-image.md) |
| [Set Up Entando on Azure Kubernetes Service (AKS)](./devops/installation/azure-kubernetes-service/azure-install.md) |[Connect your Entando Application to an External Database](./devops/external-database/) | 
| [Set Up Entando on Google Kubernetes Engine (GKE)](./devops/installation/google-cloud-platform/) || 
| [Set Up Entando on Red Hat OpenShift](./devops/installation/open-shift/openshift-install.md) | | 
