vuepress/docs/v6.3.2/tutorials/README.md
---
sidebarDepth: 2
---
::: danger
This documentation is for the version of Entando currently under development and is a work in progress.
Some screenshots or references to the previous version may be out-of-date and some documented features may
only be available by building from source.
:::

# Tutorials

::: tip Entando simplifies the development of modern apps:

1. Built using modern JavaScript frameworks
2. Backed by microservices deployed in containers, and
3. Orchestrated by Kubernetes for fully automated DevOps lifecycles
:::

Entando supports full stack micro frontend and microservice architectures for codebases that are easier to undestand, maintain, and debug across large, distributed teams, and comes with a private component repository that makes it easy for teams to share and reuse components.

Use the navigation on the left to find step-by-step tutorials for common tasks or check out our learning paths below for a more structured approach.

## Learning Paths
### Frontend Development

<style>
table th:first-of-type {
    width: 33%;
}
table th:nth-of-type(2) {
    width: 33%;
}
table th:nth-of-type(3) {
    width: 34%;
}
</style>

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Build a Basic Widget](./cms/app-builder/hello-world.md)| [Add Configuration to a Widget](./micro-frontends/widget-configuration.md)| [Generate Micro Frontends and Microservices Based on a Database Entity](./backend-developers/generate-microservices-and-micro-frontends.md) |
| [Create a React Micro Frontend](./micro-frontends/react.md) | [Enable Communication between MFEs](./micro-frontends/communication.md) |
| [Create an Angular Micro Frontend](./micro-frontends/angular.md) | [Add Access Controls to your MFEs](./backend-developers/add-access-controls.md) |
| [Create and Manage Content](./cms/content-tutorial.md)| |


### Backend Development

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Build and Publish a Simple Bundle](./ecr/publish-project-bundle.md)| [Build and Publish a Project Bundle](./ecr/publish-project-bundle.md) | [Export a Bundle from an Existing Application](./ecr/export-bundle-from-application.md) |
| [Generate Micro Frontends and Microservices Based on a Database Entity](./backend-developers/generate-microservices-and-micro-frontends.md) |[Use JDL Studio to Create a Complex Database Entity](./backend-developers/update-data-model.md) |
| [Run Micro Frontends and Microservices in Your Local Environment](./backend-developers/run-local.md) | [Add Access Controls to Your Microservices](./backend-developers/add-access-controls.md) |

### Operations

| Basic | Intermediate | Advanced
| :-: | :-: | :-:
| [Set Up Entando on a Local Kubernetes Cluster](../docs/getting-started/) | [Backing Up and Restoring Your Entando Environment](./devops/backing-up-and-restoring-your-environment.md) | [Install Bundle Microservices from a Private Registry](./ecr/ecr-private-images.md) |
| [Set Up Entando on Amazon Elastic Kubernetes Service (EKS)](./devops/installation/elastic-kubernetes-service/eks-install.md) | [Customize the base Entando Application via a Docker Image](./devops/build-core-image.md) |Automate Integration Testing With a CI/CD Pipeline <br> (Coming Soon)|
| [Set Up Entando on Azure Kubernetes Service (AKS)](./devops/installation/azure-kubernetes-service/azure-install.md) |[Connect Your Entando Application to an External Database](./devops/external-database/) |
| [Set Up Entando on Google Kubernetes Engine (GKE)](./devops/installation/google-cloud-platform/gke-install.md) | [Install the Standard Demo Application](./samples/install-standard-demo.md)| 
| [Set Up Entando on Red Hat OpenShift](./devops/installation/open-shift/openshift-install.md) | |
